--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div class="left-video">
-    <video id="video" preload="auto" src="/Users/fish/Desktop/workspace/small_route/yellowdog/static/smalldog/src/videos/propagation.mp4" autoplay="autoplay" loop="loop" controls="controls" poster="./src/images/video_first_screen.png"></video>
+    <video id="video" preload="auto" src="/sdcard/Download/propagation.mp4" autoplay="autoplay" loop="loop" controls="controls" poster="./src/images/video_first_screen.png"></video>
   </div>
   <div class="right-content">
-    <div id="click-video" onclick="test()" style="position:fixed;top:-1000px">点击</div>
+    <div id="click-video" onclick="playVideoFn()" style="position:fixed;top:-1000px">点击</div>
     <ul class="menu-icons">
       <!--
 				<li>
@@ -35,19 +35,43 @@
       <p>扫一扫二维码 进行关注</p>
     </div>
   </div>
+  <div class="modal">
+    <div class="inner-modal">
+      <input id="imei-input" class="imei-input" placeholder="请输入机器的IMEI" type="text" />
+      <div>
+        <div id="confirm-btn" class="confirm-btn">确定</div>
+      </div>
+    </div>
+  </div>
   <script src="./js/jquery.min.js"></script>
   <script src="./js/qrcode.min.js" charset="utf-8"></script>
   <script type="text/javascript">
-    // var HOST = 'http://192.168.0.108:8000';
-    // var HOST = 'https://yellowdog.jubensha.xyz';
+    /**
+     * 通过localStorage存储imei
+     **/
     var HOST = 'https://tkx.spacemans.cn';
     window.onload = function () {
       $("#click-video").trigger("click");
-      makeQrcode('0100018101904001');
+      if(localStorage.imei) {
+        makeQrcode(localStorage.imei);
+      }else {
+        $('.modal').show();
+      }
+      // 存储imei
+      $('#confirm-btn').on('click',function () {
+        var imei = $('#imei-input').val();
+        localStorage.imei = imei;
+        $('.modal').hide();
+        makeQrcode(imei);
+      });
     }
-    function test() {
+
+    //播放视频
+    function playVideoFn() {
       document.getElementById('video').play();
     }
+
+    //商城二维码
     function makeQrcode(imei) {
       $.ajax({
         url:HOST + '/v1/app/scanningcode/',
@@ -66,7 +90,7 @@
         },
         error:function (err) {
           setTimeout(function () {
-            makeQrcode('0100018101904000');
+            makeQrcode(localStorage.imei);
           }, 20*1000);
         }
       })
