太空侠rn版本重构

--- a/android/app/src/main/assets/index.html
+++ b/android/app/src/main/assets/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0;user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/screen.css">
   <title></title>
 </head>
 <body>
   <div class="left-video">
-    <video id="video" preload="auto" src="/sdcard/Download/propagation.mp4" autoplay="autoplay" loop="loop" controls="controls" poster="./src/images/video_first_screen.png"></video>
+    <video id="video" preload="auto" src="./src/videos/propagation.mp4" autoplay="autoplay" loop="loop" controls="controls" poster="./src/images/video_first_screen.png"></video>
   </div>
   <div class="right-content">
     <div id="click-video" onclick="playVideoFn()" style="position:fixed;top:-1000px">点击</div>
